remove resourceTypeMap from ldapAccessPolicy dependency
