# src/main/resources/swagger/api-docs.yaml
@@ -1367,6 +1367,14 @@ definitions:
       accessPolicyName:
         type: string
         description: User's policy for the resource
+      authDomains:
+        type: array
+        items:
+          type: string
+      authDomainsUserNotAMemberOf:
+        type: array
+        items:
+          type: string
 
   ResourceRole:
     type: object
